Added tests for store goods lib, fixed polynomial divsion, changed GetHashCode, etc

--- a/StoreGoodsUnitTests/StoreGoodsUnitTests.csproj
+++ b/StoreGoodsUnitTests/StoreGoodsUnitTests.csproj
@@ -49,11 +49,19 @@
     <Reference Include="System.Core" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="StoreGoodsTests.cs" />
+    <Compile Include="ConstructionProductTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="ElectricalProductTests.cs" />
+    <Compile Include="FoodProductTests.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\StoreGoods\StoreGoods.csproj">
+      <Project>{5190435d-addc-4fbe-ab8b-2b142076af99}</Project>
+      <Name>StoreGoods</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(VSToolsPath)\TeamTest\Microsoft.TestTools.targets" Condition="Exists('$(VSToolsPath)\TeamTest\Microsoft.TestTools.targets')" />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
